# Resource_Planning_Tool

./: .gitignore  Dockerfile  README.md  build.sh  client.py  requirements.txt  resourse_plan_tool.py  run.sh  server.py  start.sh  stop.sh  test.py
backend/: .env.example  pyproject.toml
backend/app/: main.py  seed_data.py
backend/app/api/v1/: benchmark.py  cost.py  data.py  meta.py  predict.py  router.py
backend/app/core/: cache.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  benchmark_data.py  benchmark_run.py  gpu_spec.py  model.py
backend/app/schemas/: __init__.py  benchmark.py  cost.py  predict.py
backend/app/services/: __init__.py  cost_optimizer.py  excel_importer.py
backend/app/services/prediction/: __init__.py  ensemble.py  interpolation.py  vllm_model.py
backend/app/tasks/: benchmark_runner.py
backend/data/: 资源规划工具.xlsx
backend/tests/: conftest.py  test_api.py  test_excel_import.py  test_meta.py  test_prediction.py
bak/: README.md  requirements.txt  resourse_plan_tool.py
bak/32B-AWQ/: 1.csv
bak/72B-AWQ/: 1.csv  2.csv  4.csv
benchmark_tools/: README.md  benchmark.py  benchmark_parallel.py  benchmark_serving.py  benchmark_utils.py  run.sh  test.csv  test1.csv
docs/: B300_vs_H200_inference_comparison.md  README_nor.md  REFACTOR_DESIGN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: __init__.py  plot_32b_p800_sheet.py  plot_32b_p800_sheet_compare_net_latency.py
src/: data_loader.py  performance.py  run_benchmark.py  token_processor.py  ui.py  utils.py  visualization.py
(+121 files in other folders)
